--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: JialeZhang's Blog
 subtitle: A blogging framework for hackers.
 author: JialeZhang
 simple_search: http://google.com/search
-description:This is a blog from JialeZhang
+description: This is a blog from JialeZhang
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -58,13 +58,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:jialezhang
+github_user:
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:jialezhang
+twitter_user:
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
@@ -89,8 +89,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name:jialezhang
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id:
